--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,22 +1,25 @@
 exclude: "^docs/|/migrations/"
-default_stages: [commit]
+default_stages: [ commit ]
+
+default_language_version:
+  python: python3.9 # Replace with Project Python Version
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.3.0
     hooks:
-      - id: trailing-whitespace
-        exclude: requirements/
-      - id: end-of-file-fixer
-        exclude: requirements/
       - id: check-yaml
-        exclude: requirements/
+      - id: debug-statements
+      - id: check-case-conflict
+      - id: check-merge-conflict
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
 
   - repo: https://github.com/asottile/pyupgrade
     rev: v2.34.0
     hooks:
       - id: pyupgrade
-        args: [--py39-plus]
+        args: [ --py39-plus ]
 
   - repo: https://github.com/psf/black
     rev: 22.3.0
@@ -32,11 +35,17 @@ repos:
     rev: 4.0.1
     hooks:
       - id: flake8
-        args: ["--config=setup.cfg"]
-        additional_dependencies: [flake8-isort]
+        args: [ "--config=setup.cfg" ]
+        additional_dependencies: [ flake8-isort ]
+
+  - repo: https://github.com/adamchainz/django-upgrade
+    rev: 1.7.0
+    hooks:
+      - id: django-upgrade
+        args: [ --target-version, "4.0" ]   # Replace with Django version
 
 # sets up .pre-commit-ci.yaml to ensure pre-commit dependencies stay up to date
 ci:
   autoupdate_schedule: weekly
-  skip: []
+  skip: [ ]
   submodules: false
