--- a/.env-production-template
+++ b/.env-production-template
@@ -20,3 +20,8 @@ DJANGO_EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
 DJANGO_EMAIL_HOST=#smtp.mail-server.com
 DJANGO_EMAIL_HOST_USER=#any@domain.com
 DJANGO_EMAIL_HOST_PASSWORD=#abc123
+
+# reCAPTCHA v3
+RECAPTCHA_PUBLIC_KEY= #ex: 6LcmPasdasdq12312123ewtrhfsd232q232356_
+RECAPTCHA_PRIVATE_KEY= #ex: 6Lqwewvbdaasdqqefhi75743dfsdfsy5434434
+RECAPTCHA_REQUIRED_SCORE= #ex: 0.85
