--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,7 @@ warn_unused_ignores = True
 warn_redundant_casts = True
 warn_unused_configs = True
 plugins = mypy_django_plugin.main
+exclude = tests
 
 [mypy.plugins.django-stubs]
 django_settings_module = config.settings.local
