Added run configurations

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@
 !/media/uploads/.gitkeep
 # Ignore media test folder
 media_test/
+# Ignore dist except for styles build with Tailwind
+dist/*
+!dist/styles.css
 
 # Dabatase
 db.sqlite3
@@ -27,7 +30,6 @@ __pycache__/
 .Python
 build/
 develop-eggs/
-dist/
 downloads/
 eggs/
 .eggs/
