--- a/.github/workflows/django_ci.yaml
+++ b/.github/workflows/django_ci.yaml
@@ -24,6 +24,11 @@ jobs:
             requirements/base.txt
             requirements/local.txt
 
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install -r requirements/local.txt
+
       - name: Run pre-commit
         uses: pre-commit/action@v3.0.0
 
