--- a/.github/workflows/django_cd.yaml
+++ b/.github/workflows/django_cd.yaml
@@ -36,6 +36,7 @@ jobs:
             python manage.py makemigrations
             python manage.py migrate
             python manage.py collectstatic --noinput
+            python manage.py compilemessages
             $FINISH_CMD
 
   on-failure:
