Add technology description model and refactor Technology model

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -46,6 +46,6 @@ repos:
 
 # sets up .pre-commit-ci.yaml to ensure pre-commit dependencies stay up to date
 ci:
-  autoupdate_schedule: weekly
+  autoupdate_schedule: quarterly
   skip: [ ]
   submodules: false
